[package]
name = "assay-runner-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux-only platform adapter for the Assay-Runner candidate. Hosts cgroup placement primitives (Phase 2D Slice 3)."
readme.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[lints]
workspace = true
