[package]
name = "assay-runner-spike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal spike contracts for measured Assay runner experiments."
readme.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
