[package]
name = "assay-runner-spike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Compatibility wrapper crate that re-exports the Assay-Runner candidate surface from assay-runner-schema (Slice 1) and assay-runner-core (Slice 2)."
readme.workspace = true
publish = false

[dependencies]
assay-runner-core = { workspace = true }
assay-runner-schema = { workspace = true }

[lints]
workspace = true
