[package]
name = "assay-sim"
version = "2.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Simulation harness for Assay (internal, API unstable)"
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tar = "0.4"
flate2 = "1.0"
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }

assay-core = { workspace = true }
assay-evidence = { workspace = true }
