[package]
name = "gateway-evidence-replay"
# Internal/experimental MVP: a CLI binary shipped via release artifacts, not crates.io. Not a public
# crate surface (publishing one is a deliberate Gate-D decision); registered in
# scripts/ci/check-public-crate-policy.sh non_crates_io_crates.
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic replay verifier for gateway-path evidence bundles."

[lints]
workspace = true

[[bin]]
name = "gateway-evidence-replay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["std"] }
clap.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
