[package]
name = "verdict-core"
version = "0.3.4"
edition = "2021"
description = "Core evaluation engine for Verdict - the CI-first PR regression gate for LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/verdict-eval/verdict"
keywords = ["llm", "evaluation", "testing", "ci", "ai"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
